--- a/Testing/testing_networking/pubspec.yaml
+++ b/Testing/testing_networking/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_application_1
+name: testing_networking
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -19,7 +19,6 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
-  provider: ^6.0.1
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,17 +29,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-   
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  provider: ^6.0.1
-  form_field_validator: ^1.1.0
-  shared_preferences: ^2.0.8
   http: ^0.13.4
-  animated_splash_screen: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -65,16 +59,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - images/cons.jpg
-    - images/signup_back.jpg
-    - images/pp.jfif
-    - images/intro.jpg
-    - demo_builder/hassan.jpg
-    - demo_builder/taha.jpg
-    - demo_builder/khizer.jpg
-    - demo_builder/ramiz.jpg
-    - demo_builder/areeeb.jfif
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -87,25 +74,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: MrDafoe
-      fonts:
-        - asset: fonts/MrDafoe-Regular.ttf
-              
-    - family: Mont
-      fonts:
-        - asset: fonts/Montserrat-Regular.ttf
-    - family: Billabong
-      fonts:
-        - asset: fonts/Billabong.ttf      
-
-    - family: AvenirLTStd-Black
-      fonts: 
-        - asset: fonts/AvenirLTStd-Black.otf
-
-    - family: Oswald
-      fonts: 
-        - asset: fonts/Oswald-VariableFont_wght.ttf
-    
+  # fonts:
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
+  #   - family: Trajan Pro
+  #     fonts:
+  #       - asset: fonts/TrajanPro.ttf
+  #       - asset: fonts/TrajanPro_Bold.ttf
+  #         weight: 700
+  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
