--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.11.0 <3.0.0"
   provider: ^6.0.1
 
 # Dependencies specify other packages that your package needs in order to work.
@@ -75,7 +75,7 @@ flutter:
     - demo_builder/khizer.jpg
     - demo_builder/ramiz.jpg
     - demo_builder/areeeb.jfif
-
+    - demo_builder/default.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
